logs/django-plist.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_plist'...
Listing './lib/python3.5/site-packages/django_plist/templates'...
Listing './lib/python3.5/site-packages/django_plist/templates/django_plist'...
Listing './lib/python3.5/site-packages/django_plist/templatetags'...
Compiling './lib/python3.5/site-packages/django_plist/templatetags/django_plist_tags.py'...
***   File "./lib/python3.5/site-packages/django_plist/templatetags/django_plist_tags.py", line 23
    raise template.TemplateSyntaxError, \
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_plist/tests'...
Compiling './lib/python3.5/site-packages/django_plist/tests/templatetagtests.py'...
***   File "./lib/python3.5/site-packages/django_plist/tests/templatetagtests.py", line 41
    fragment = render_object(42L)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_plist/tests/testapp'...
Listing './lib/python3.5/site-packages/django_plist/tests/testapp/fixtures'...
Listing './lib/python3.5/site-packages/django_plist/views'...
Compiling './lib/python3.5/site-packages/django_plist/views/generic.py'...
***   File "./lib/python3.5/site-packages/django_plist/views/generic.py", line 27
    raise AttributeError,"Generic view must be called with either an object_id or a slug/slug_field."
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_plist-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
